# coc7thrunner

./: .gitignore  AGENTS.md  DEV_SETUP_WINDOWS.md  KNOWLEDGE_INGEST_LIMITATIONS.md  MVP_SPEC.md  PHASE2_PLAN.md  PLAYTEST_DEMO_CHECKLIST.md  PLAYTEST_RESULT_01.md  PROMPT_CLAUDE.txt  PROMPT_CODEX.txt  PROMPT_GEMINI.txt  PYTHON_VERSION_NOTES.md  README.md  SCENARIO_AUTHORING.md  WINDOWS_PY312_REPAIR.md  house_rules.md  pyproject.toml  review_policy.md
coc7th rules and templates/: COC七版规则空白卡.xlsx
scripts/: Bootstrap-ProjectPython312.ps1  Build-InternalLauncherExe.ps1  Start-InternalLocalLauncher.cmd  Use-ProjectPython312.ps1  repair_windows_py312_env.ps1
tests/: __init__.py  conftest.py  helpers.py  test_api_validation_error_shaping.py  test_authored_scenario_example.py  test_authoritative_execution.py  test_character_import_session_integration.py  test_characters.py  test_checkpoint_ui.py  test_dice.py  test_dice_execution_backend.py  test_gameplay_grounding_integration.py  test_internal_local_launcher.py  test_investigator_playtest_ui.py  test_keeper_dashboard_ui.py  test_knowledge.py  test_knowledge_api.py  test_knowledge_file_ingest.py  test_language_defaults.py  test_local_llm_service.py  test_mvp_extensions.py  test_playtest_demo_flow.py  test_playtest_knowledge_ui.py  test_playtest_launcher_ui.py  test_playtest_recap_ui.py  test_playtest_rules_query_ui.py  test_playtest_session_index_ui.py  test_playtest_session_setup_ui.py  test_review_gate.py  test_rollback.py  test_rules_query_acceptance.py  test_rules_query_validation.py  test_scenario_authoring_validation.py  (+7 more)
(+2347 files in other folders)
